light updates after class 07/10

--- a/notebooks/google_merch_store/2_ga4_merch_encoding.ipynb
+++ b/notebooks/google_merch_store/2_ga4_merch_encoding.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,9 @@
     "import numpy as np\n",
     "\n",
     "\n",
-    "filepath=r'df_merch_pre_proc.csv'\n",
+    "filepath=r'data/df_merch_pre_proc.csv'\n",
+    "\n",
+    "excel_mapping_filepath=r'data/df_merch_values_encoded.xlsx'\n",
     "\n",
     "file_tag = \"df_merch_pre_proc\""
    ]
@@ -31,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run \"dslabs_functions.py\"\n"
+    "%run \"scripts/dslabs_functions.py\"\n"
    ]
   },
   {
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +61,7 @@
     }
    ],
    "source": [
-    "%run \"data_functions.py\"\n"
+    "%run \"scripts/data_functions.py\"\n"
    ]
   },
   {
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -79,53 +81,53 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 308445 entries, 0 to 308444\n",
+      "Index: 30799 entries, 204318 to 247024\n",
       "Data columns (total 35 columns):\n",
-      " #   Column                           Non-Null Count   Dtype  \n",
-      "---  ------                           --------------   -----  \n",
-      " 0   event_name                       308445 non-null  object \n",
-      " 1   device_category                  308445 non-null  object \n",
-      " 2   device_mobile_brand_name         308445 non-null  object \n",
-      " 3   device_mobile_model_name         308445 non-null  object \n",
-      " 4   device_operating_system          308445 non-null  object \n",
-      " 5   device_operating_system_version  214887 non-null  object \n",
-      " 6   device_language                  169432 non-null  object \n",
-      " 7   device_web_info_browser          308445 non-null  object \n",
-      " 8   device_web_info_browser_version  308445 non-null  object \n",
-      " 9   geo_country                      308445 non-null  object \n",
-      " 10  geo_region                       304880 non-null  object \n",
-      " 11  geo_city                         291990 non-null  object \n",
-      " 12  traffic_source_medium            308445 non-null  object \n",
-      " 13  traffic_source_source            308445 non-null  object \n",
-      " 14  session_engaged                  308433 non-null  float64\n",
-      " 15  engagement_time_msec             308445 non-null  float64\n",
-      " 16  returning_user                   308445 non-null  int64  \n",
-      " 17  local_hour                       308445 non-null  int64  \n",
-      " 18  local_minute                     308445 non-null  int64  \n",
-      " 19  hour_minute_fraction             308445 non-null  float64\n",
-      " 20  time_of_day                      308445 non-null  object \n",
-      " 21  year                             308445 non-null  int64  \n",
-      " 22  quarter                          308445 non-null  int64  \n",
-      " 23  month                            308445 non-null  int64  \n",
-      " 24  day                              308445 non-null  int64  \n",
-      " 25  day_of_week                      308445 non-null  object \n",
-      " 26  day_of_year                      308445 non-null  int64  \n",
-      " 27  week_number                      308445 non-null  int64  \n",
-      " 28  day_of_week_nr                   308445 non-null  int64  \n",
-      " 29  is_weekend                       308445 non-null  int64  \n",
-      " 30  domain                           308445 non-null  object \n",
-      " 31  page_path_level_1                308204 non-null  object \n",
-      " 32  page_path_level_2                308249 non-null  object \n",
-      " 33  page_path_level_3                308249 non-null  object \n",
-      " 34  path_length                      308445 non-null  int64  \n",
+      " #   Column                           Non-Null Count  Dtype  \n",
+      "---  ------                           --------------  -----  \n",
+      " 0   event_name                       30799 non-null  object \n",
+      " 1   device_category                  30799 non-null  object \n",
+      " 2   device_mobile_brand_name         30799 non-null  object \n",
+      " 3   device_mobile_model_name         30799 non-null  object \n",
+      " 4   device_operating_system          30799 non-null  object \n",
+      " 5   device_operating_system_version  30799 non-null  object \n",
+      " 6   device_language                  17046 non-null  object \n",
+      " 7   device_web_info_browser          30799 non-null  object \n",
+      " 8   device_web_info_browser_version  30799 non-null  object \n",
+      " 9   geo_country                      30799 non-null  object \n",
+      " 10  geo_region                       30431 non-null  object \n",
+      " 11  geo_city                         29126 non-null  object \n",
+      " 12  traffic_source_medium            30799 non-null  object \n",
+      " 13  traffic_source_source            30799 non-null  object \n",
+      " 14  session_engaged                  30798 non-null  float64\n",
+      " 15  engagement_time_msec             30799 non-null  float64\n",
+      " 16  returning_user                   30799 non-null  int64  \n",
+      " 17  local_hour                       30799 non-null  int64  \n",
+      " 18  local_minute                     30799 non-null  int64  \n",
+      " 19  hour_minute_fraction             30799 non-null  float64\n",
+      " 20  time_of_day                      30799 non-null  object \n",
+      " 21  year                             30799 non-null  int64  \n",
+      " 22  quarter                          30799 non-null  int64  \n",
+      " 23  month                            30799 non-null  int64  \n",
+      " 24  day                              30799 non-null  int64  \n",
+      " 25  day_of_week                      30799 non-null  object \n",
+      " 26  day_of_year                      30799 non-null  int64  \n",
+      " 27  week_number                      30799 non-null  int64  \n",
+      " 28  day_of_week_nr                   30799 non-null  int64  \n",
+      " 29  is_weekend                       30799 non-null  int64  \n",
+      " 30  domain                           30799 non-null  object \n",
+      " 31  page_path_level_1                30775 non-null  object \n",
+      " 32  page_path_level_2                30779 non-null  object \n",
+      " 33  page_path_level_3                30779 non-null  object \n",
+      " 34  path_length                      30799 non-null  int64  \n",
       "dtypes: float64(3), int64(12), object(20)\n",
-      "memory usage: 82.4+ MB\n"
+      "memory usage: 8.5+ MB\n"
      ]
     }
    ],
    "source": [
-    "# test_data=True\n",
-    "test_data=False\n",
+    "test_data=True\n",
+    "# test_data=False\n",
     "\n",
     "if test_data==True:\n",
     "\n",
@@ -150,8 +152,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# device columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## device category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'desktop': 1, 'tablet': 2, 'mobile': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "device_category_mapping = sheet_to_dict(excel_mapping_filepath, 'device_category')\n",
+    "print(device_category_mapping)\n",
+    "\n",
+    "\n",
+    "data_enc['device_category'] = encode_column_with_mapping(data_enc, 'device_category', device_category_mapping)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Geo columns\n",
     "Using the distance from a central point, like Google's headquarters in California, as a proxy for geographical encoding can be a clever approach. For GA4 datasets related to Google services, proximity to headquarters (Mountain View, California) might correlate with certain behaviors or delivery times."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# geo_country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geo_country_mapping={\n",
+    "    \"United States\":1,\n",
+    "    \"Canada\":2\n",
+    "}\n",
+    "\n",
+    "\n",
+    "data_enc['geo_country'] = encode_column_with_mapping(data_enc, 'geo_country', geo_country_mapping)\n"
    ]
   },
   {
@@ -164,14 +224,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['North Carolina', 'Vermont', 'Rhode Island', 'North Dakota', 'Minnesota', 'Utah', 'New Jersey', 'Maryland', 'Hawaii', 'Alberta', 'Georgia', 'Colorado', 'Oregon', 'Texas', 'District of Columbia', 'Indiana', 'Montana', 'Kansas', 'West Virginia', 'Alaska', 'Nevada', 'New Mexico', 'Washington', 'Delaware', 'Kentucky', 'Oklahoma', 'Illinois', 'Wyoming', 'South Carolina', 'Arizona', 'Prince Edward Island', 'New Hampshire', 'South Dakota', nan, 'Ontario', 'Mississippi', 'Arkansas', 'Pennsylvania', 'Michigan', 'British Columbia', 'Wisconsin', 'Louisiana', 'Manitoba', 'Quebec', 'Nebraska', 'Tennessee', 'New Brunswick', 'Missouri', 'Saskatchewan', 'Connecticut', 'California', 'Iowa', 'Nova Scotia', 'Idaho', 'Florida', 'Ohio', 'New York', 'Alabama', 'Massachusetts', 'Newfoundland and Labrador', 'Maine', 'Virginia']\n"
+      "['Alaska', 'Massachusetts', 'Hawaii', 'Rhode Island', 'Michigan', 'Maryland', 'Washington', 'Colorado', 'Maine', 'Vermont', 'New Mexico', 'South Dakota', 'North Carolina', 'British Columbia', 'Oklahoma', 'Pennsylvania', 'Utah', 'Montana', 'Oregon', 'Minnesota', 'South Carolina', 'District of Columbia', 'New York', 'Nova Scotia', 'Georgia', 'Missouri', 'Alabama', 'Wisconsin', 'Connecticut', 'New Brunswick', nan, 'Manitoba', 'Mississippi', 'Florida', 'Kentucky', 'Newfoundland and Labrador', 'Saskatchewan', 'Arizona', 'Arkansas', 'Wyoming', 'Nebraska', 'California', 'Tennessee', 'Delaware', 'West Virginia', 'Alberta', 'Ohio', 'Nevada', 'Indiana', 'Ontario', 'Texas', 'Virginia', 'Kansas', 'Idaho', 'Iowa', 'North Dakota', 'Prince Edward Island', 'Quebec', 'Illinois', 'New Jersey', 'New Hampshire', 'Louisiana']\n"
      ]
     }
    ],
@@ -184,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,14 +331,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Charleston', 'Houston', 'Yorba Linda', 'San Antonio', 'Edmonton', 'San Mateo', 'Hamilton', 'Rochester', 'Kirkland', 'Saskatoon', 'Vaughan', 'Bridgeport', 'Nashville', 'Redwood City', 'Milpitas', 'Richmond', 'Minneapolis', 'Markham', 'Gatineau', 'Pittsburgh', 'Jacksonville', 'Cambridge', 'Indianapolis', 'Cupertino', 'Albuquerque', 'Des Moines', 'San Jose', 'Boise', 'Salt Lake City', 'Laval', 'Newark', 'Las Vegas', 'Wichita', 'Fremont', 'Quebec City', 'Other', 'Kitchener', 'Salmon Arm', 'Montreal', 'Mississauga', 'Providence', 'Omaha', 'Vancouver', 'Honolulu', 'Ottawa', 'Fort Worth', 'Miami', 'Dallas', 'San Francisco', 'Milwaukee', 'Roseville', 'Kansas City', 'Tampa', 'Orlando', 'London', 'Oakland', 'New York', 'Boston', 'Chicago', 'Atlanta', 'Little Rock', 'Longueuil', 'Palo Alto', 'Calgary', 'Birmingham', 'Charlotte', 'Wilmington', 'Jackson', nan, 'Brampton', 'Portland', 'Seattle', 'Oklahoma City', 'Surrey', 'Austin', 'Irvine', 'Oakville', 'Cleveland', 'New Orleans', 'Cincinnati', 'Columbus', 'Baltimore', 'Virginia Beach', 'Santa Clara', 'San Diego', 'Winnipeg', 'Phoenix', 'Toronto', 'Halifax', 'Fargo', 'Cypress', 'Richmond Hill', 'Redmond', 'Aurora', 'Springfield', 'Manchester', 'Philadelphia', 'Burlington', 'Raleigh', 'Washington', 'Mountain View', 'Turner', 'Billings', 'Sunnyvale', 'Sacramento', 'Boardman', 'New York City', 'Detroit', 'Coffeyville', 'Memphis', 'Bellevue', 'Ashburn', 'Lincoln', 'Cedar Rapids', 'Denver', 'Louisville', 'Los Angeles', 'Jersey City']\n"
+      "['Nashville', 'Washington', 'Edmonton', 'Richmond Hill', 'Jackson', 'Brampton', 'Wilmington', 'Manchester', 'Vaughan', 'Yorba Linda', 'Oklahoma City', 'Charlotte', 'Markham', 'Calgary', 'Cincinnati', 'Milwaukee', 'Burlington', 'New York', 'Des Moines', 'Irvine', 'Jacksonville', 'New Orleans', 'Albuquerque', 'Cypress', 'Milpitas', 'Springfield', 'Saskatoon', 'Raleigh', 'Palo Alto', 'Richmond', 'Pittsburgh', 'Orlando', 'Miami', 'Jersey City', 'Fargo', 'Quebec City', 'Winnipeg', 'Kansas City', 'Billings', 'Providence', 'Omaha', 'Detroit', 'Toronto', 'Cambridge', 'Newark', 'Laval', 'Coffeyville', 'Memphis', 'Redwood City', 'Columbus', 'Austin', 'Houston', 'Cupertino', 'Boston', 'Vancouver', 'Louisville', 'Oakland', 'Bellevue', 'London', 'Fremont', 'Montreal', 'Phoenix', 'San Antonio', 'Surrey', 'Philadelphia', 'Chicago', 'Other', 'Roseville', 'Charleston', 'Mississauga', 'San Diego', 'Fort Worth', 'Portland', 'Gatineau', 'Sacramento', 'Kitchener', 'Mountain View', 'Hamilton', 'St. Louis', 'Salt Lake City', 'Tampa', 'Las Vegas', 'Minneapolis', 'Longueuil', 'Dallas', 'Rochester', nan, 'Boardman', 'Boise', 'San Francisco', 'Oakville', 'Indianapolis', 'Berkeley', 'Santa Clara', 'Halifax', 'Kirkland', 'Seattle', 'Los Angeles', 'San Mateo', 'Bridgeport', 'Birmingham', 'San Jose', 'Ashburn', 'Ottawa', 'Denver', 'Virginia Beach', 'New York City', 'Turner', 'Lincoln', 'Baltimore', 'Redmond', 'Wichita', 'Aurora', 'Salmon Arm', 'Sunnyvale', 'Little Rock', 'Atlanta', 'Honolulu']\n"
      ]
     }
    ],
@@ -291,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
