ga4 merch finished until feature engineering. balancing missing

--- a/notebooks/google_merch_store/3_ga4_merch_missing_values_final.ipynb
+++ b/notebooks/google_merch_store/3_ga4_merch_missing_values_final.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -228,12 +228,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MV1 strategy aplication"
+    "## MV1 strategy apply"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
        "[8 rows x 42 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,9 +565,14 @@
     "\n",
     "# this script is available in data_functions originally from DSLabs site in Missing Values chapter\n",
     "\n",
-    "data_1=data.copy()\n",
-    "data_1 =  mvi_by_filling(data_1, strategy=\"frequent\")\n",
+    "def apply_strategy_1(df):\n",
     "\n",
+    "    df_copy=df.copy()\n",
+    "    df_copy = mvi_by_filling(df_copy, strategy=\"frequent\")\n",
+    "\n",
+    "    return df_copy\n",
+    "\n",
+    "data_1=apply_strategy_1(data)\n",
     "data_1.describe()\n"
    ]
   },
@@ -712,7 +717,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MV2 strategy aplication"
+    "## MV2 strategy apply"
    ]
   },
   {
@@ -722,10 +727,19 @@
    "outputs": [],
    "source": [
     "# numeric_vars: list[str] = get_variable_types(data)[\"numeric\"]\n",
-    "data_2=data.copy()\n",
     "\n",
-    "data_2 = data_2.drop(['device_language','device_operating_system_version'], axis=1)\n",
-    "data_2 = data_2.dropna(axis=0, how=\"any\")"
+    "\n",
+    "\n",
+    "def apply_strategy_2(df):\n",
+    "\n",
+    "    df_copy=df.copy()\n",
+    "\n",
+    "    df_copy = df_copy.drop(['device_language','device_operating_system_version'], axis=1)\n",
+    "    df_copy = df_copy.dropna(axis=0, how=\"any\")\n",
+    "\n",
+    "    return df_copy\n",
+    "\n",
+    "data_1=apply_strategy_2(data)"
    ]
   },
   {
@@ -839,9 +853,9 @@
     "figure()\n",
     "eval_2: dict[str, list] = evaluate_approach(train_2, test_2, target='returning_user', metric=\"recall\")\n",
     "plot_multibar_chart(\n",
-    "    [\"NB\", \"KNN\"], eval_2, title=f\"{file_tag}_mv2_evaluation\", percentage=True\n",
+    "    [\"NB\", \"KNN\"], eval_2, title=f\"{file_tag}_approach_2_evaluation\", percentage=True\n",
     ")\n",
-    "savefig(f\"images/{file_tag}_mv2_evaluation.png\")\n",
+    "savefig(f\"images/{file_tag}_approach_2_evaluation.png\")\n",
     "show()"
    ]
   },
@@ -1123,15 +1137,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "if test_data==False:\n",
     "    \n",
-    "    # train_2.to_csv(f\"data/df_merch_3_mv_input_train.csv\", index=False)\n",
-    "    # test_2.to_csv(f\"data/df_merch_3_mv_input_test.csv\", index=False)\n",
-    "    data_1.to_csv(f\"data/df_merch_3_mv_input.csv\", index=False)\n",
+    "    data=apply_strategy_1(data)\n",
+    "    \n",
+    "    data.to_csv(f\"data/df_merch_3_mv_input.csv\", index=False)\n",
     "    "
    ]
   }
