francis_missing_values_2024_10_14
francis_missing_values_2024_10_14

--- a/notebooks/ecommerce_behaviour/_0_ecom_data_pre_processing.ipynb
+++ b/notebooks/ecommerce_behaviour/_0_ecom_data_pre_processing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -567,129 +567,129 @@
      "text": [
       "Distribuição original:\n",
       "event_type\n",
-      "view        0.936847\n",
-      "cart        0.048056\n",
-      "purchase    0.015098\n",
+      "view        0.936228\n",
+      "cart        0.049509\n",
+      "purchase    0.014263\n",
       "Name: proportion, dtype: float64\n",
       "Distribuição após undersampling:\n",
       "event_type\n",
-      "view        0.930242\n",
-      "cart        0.048180\n",
-      "purchase    0.021579\n",
+      "view        0.935317\n",
+      "cart        0.049569\n",
+      "purchase    0.015114\n",
       "Name: proportion, dtype: float64\n",
       "                 event_time event_type  product_id          category_id  \\\n",
-      "0   2020-04-02 07:06:34 UTC       view    10300129  2232732104888681081   \n",
-      "1   2020-04-18 14:31:12 UTC       view   100119349  2232732093077520756   \n",
-      "2   2020-04-12 10:04:49 UTC       view    47500019  2053013561554240247   \n",
-      "3   2020-04-08 05:38:35 UTC       view   100174793  2053013555782877609   \n",
-      "4   2020-04-25 20:31:45 UTC       view     7001735  2232732079009824823   \n",
-      "5   2020-04-15 15:34:27 UTC       view    15902698  2053013566142809077   \n",
-      "6   2020-04-26 03:59:09 UTC       view     1005097  2232732093077520756   \n",
-      "7   2020-04-28 03:14:19 UTC       view   100137115  2232732066611463064   \n",
-      "8   2020-04-30 08:46:27 UTC       view   100086235  2232732093077520756   \n",
-      "9   2020-04-03 15:38:01 UTC       cart    12201719  2053013553325015316   \n",
-      "10  2020-04-09 10:01:19 UTC       view    10700055  2232732105123562109   \n",
-      "11  2020-04-15 20:06:53 UTC       view     5000056  2232732102950912587   \n",
-      "12  2020-04-04 16:34:25 UTC       view     1801806  2232732099754852875   \n",
-      "13  2020-04-30 17:06:10 UTC       view     1004709  2232732093077520756   \n",
-      "14  2020-04-20 11:58:07 UTC       view     1005098  2232732093077520756   \n",
-      "15  2020-04-04 12:17:17 UTC       view     1005253  2232732093077520756   \n",
-      "16  2020-04-17 07:30:52 UTC       view    22400121  2053013560866374351   \n",
-      "17  2020-04-26 15:42:37 UTC       view    12201998  2053013553325015316   \n",
-      "18  2020-04-26 10:56:46 UTC       view     3701134  2232732101063475749   \n",
-      "19  2020-04-30 05:52:04 UTC       view    26400304  2053013553056579841   \n",
+      "0   2020-04-12 11:56:08 UTC       view    10900115  2232732105912091273   \n",
+      "1   2020-04-23 05:30:29 UTC       view    37600024  2053013558458843721   \n",
+      "2   2020-04-15 19:10:51 UTC       view   100045382  2232732093077520756   \n",
+      "3   2020-04-23 18:11:28 UTC       view    12301106  2053013563743667055   \n",
+      "4   2020-04-25 18:32:55 UTC       view   100067673  2232732103294845523   \n",
+      "5   2020-04-22 12:31:02 UTC       view   100004053  2232732091483685190   \n",
+      "6   2020-04-10 10:56:55 UTC       view    15901552  2053013566142809077   \n",
+      "7   2020-04-13 09:06:24 UTC       view     4600701  2053013557385101831   \n",
+      "8   2020-04-17 15:38:08 UTC       view     2602039  2232732101835227701   \n",
+      "9   2020-04-09 18:02:16 UTC       view   100109560  2053013563835941749   \n",
+      "10  2020-04-12 10:38:04 UTC       view     3700779  2232732101063475749   \n",
+      "11  2020-04-20 10:42:26 UTC       view    12600002  2232732101164139047   \n",
+      "12  2020-04-28 20:28:14 UTC       view     3601466  2232732092297380188   \n",
+      "13  2020-04-11 06:22:37 UTC       view   100092807  2053013565001958329   \n",
+      "14  2020-04-04 17:57:03 UTC       view    41700014  2053013560287560373   \n",
+      "15  2020-04-20 09:41:22 UTC       view    15400209  2232732107774362287   \n",
+      "16  2020-04-02 14:59:49 UTC       view    16000579  2053013556856619499   \n",
+      "17  2020-04-17 20:05:53 UTC       view   100058815  2232732135054115162   \n",
+      "18  2020-04-17 13:48:44 UTC       view   100041041  2232732086433743059   \n",
+      "19  2020-04-22 18:20:43 UTC       view    26205017  2232732081585127530   \n",
       "\n",
-      "                    category_code      brand    price    user_id  \\\n",
-      "0                   apparel.scarf     chicco    14.13  525254962   \n",
-      "1        construction.tools.light    samsung  1280.32  564776771   \n",
-      "2              electronics.clocks   puckator    20.59  514083451   \n",
-      "3                   sport.bicycle     adidas    82.34  638156155   \n",
-      "4                     kids.skates  wingoffly   144.12  646927025   \n",
-      "5    construction.tools.generator    kukmara    58.27  637538119   \n",
-      "6        construction.tools.light    tp-link   123.27  512789198   \n",
-      "7                             NaN     carbon   728.72  547337863   \n",
-      "8        construction.tools.light    samsung   106.04  646662457   \n",
-      "9       appliances.kitchen.toster    torrent   139.98  513650846   \n",
-      "10                  apparel.scarf        NaN    40.82  515708894   \n",
-      "11      appliances.sewing_machine    bernina   297.24  612440241   \n",
-      "12   appliances.personal.massager      artel   114.69  618647967   \n",
-      "13       construction.tools.light     huawei   151.84  517056194   \n",
-      "14       construction.tools.light    samsung   148.93  612727012   \n",
-      "15       construction.tools.light     xiaomi   321.24  557664132   \n",
-      "16         auto.accessories.radar    m-audio   124.13  515349581   \n",
-      "17      appliances.kitchen.toster       trek   422.15  515075120   \n",
-      "18  appliances.environment.vacuum      bosch   107.85  647478685   \n",
-      "19  computers.peripherals.printer    lucente   279.80  649372299   \n",
+      "                       category_code     brand    price    user_id  \\\n",
+      "0           appliances.kitchen.mixer     vitek    41.16  521995084   \n",
+      "1                      apparel.shoes   carters    16.09  645811106   \n",
+      "2           construction.tools.light   samsung   334.35  512540410   \n",
+      "3            appliances.kitchen.hood    alteco    47.29  552791080   \n",
+      "4             apparel.shoes.step_ins     intel  1930.01  614818478   \n",
+      "5                                NaN   polaris    41.16  638696672   \n",
+      "6       construction.tools.generator       NaN    44.79  519182320   \n",
+      "7      appliances.kitchen.dishwasher   indesit   453.01  611043057   \n",
+      "8                                NaN     bosch   471.03  524372631   \n",
+      "9   appliances.kitchen.refrigerators    pulser  1416.86  627484091   \n",
+      "10     appliances.environment.vacuum    xiaomi   514.79  516312975   \n",
+      "11     appliances.environment.vacuum  delonghi   167.29  626223966   \n",
+      "12         appliances.kitchen.washer    daewoo   772.19  545324492   \n",
+      "13                     apparel.shoes   defacto     5.12  514444811   \n",
+      "14               stationery.cartrige  prologic    17.03  608117276   \n",
+      "15                               NaN     intex   615.59  518363213   \n",
+      "16                   accessories.bag    gipfel    69.80  545171572   \n",
+      "17                  apparel.trousers      iqos    84.92  519180698   \n",
+      "18                               NaN    romana   180.18  588565490   \n",
+      "19    construction.components.faucet       NaN   171.43  550190062   \n",
       "\n",
       "                            user_session  \n",
-      "0   f71dc924-d5f3-4e21-906b-a492fe8476c9  \n",
-      "1   20e5e22f-1c18-41af-94e1-c3da9a01a3f7  \n",
-      "2   0c4b4c5e-1ed0-49eb-9882-134f5e70c6f5  \n",
-      "3   01663f5b-958c-40fb-9c31-8c29ee897952  \n",
-      "4   b56c7ad3-dbb8-4637-ae2b-943f703c15fc  \n",
-      "5   d5278fad-6c3b-4299-ba87-63fa529953a3  \n",
-      "6   389c3154-31b9-45ef-94f4-524f950d0297  \n",
-      "7   164e5ade-5b5b-4bc7-a207-d97b8d00aafd  \n",
-      "8   d688fa8c-41a3-4918-88b9-ba0b1e8c1706  \n",
-      "9   e2caf244-71ac-4104-ae14-8e50c8476a7a  \n",
-      "10  f61965d9-9eaf-44ce-bdbf-1f6cf5b38458  \n",
-      "11  8be0be81-1293-4110-86be-52042f3d81d0  \n",
-      "12  c9f3c8ff-5aed-4166-92e6-ebe925c3428a  \n",
-      "13  6ffba2ac-ecea-4844-9c9e-f56bfd5c0ec1  \n",
-      "14  5ccad729-1569-476a-973b-ac39d043a4e2  \n",
-      "15  3f8d73ce-a0cb-4b34-ad59-57ce2486f89c  \n",
-      "16  d62141d5-d2b3-40fd-b2f1-3edb317a44d4  \n",
-      "17  0a33d6a0-1523-426d-be6d-b884835d525c  \n",
-      "18  f4600583-a201-4151-a89f-2daf427cef81  \n",
-      "19  fe8355cf-f17c-44c7-a22d-94d827e5643d  \n"
+      "0   e296c374-1085-465a-898f-06a6248d3654  \n",
+      "1   5aaffefe-b7bc-4a39-8d2a-a59404c169cc  \n",
+      "2   675472b2-558f-4d6c-8c22-df336c4af484  \n",
+      "3   1b09b3bf-9e0c-4d77-8e49-0d9ee1a97a1e  \n",
+      "4   813f6f52-ce8b-4639-be2a-09e23b497e01  \n",
+      "5   98ba39e1-0421-4f59-9ce4-65b196036357  \n",
+      "6   ca9d9ec7-1582-409b-add2-3e963a069a52  \n",
+      "7   8d1f3f00-46f9-4583-a66c-17b47cbd29c7  \n",
+      "8   cc9d1964-398b-49f2-a806-27427cb16d13  \n",
+      "9   4b8f29ff-fcbd-4790-b034-2338733b6644  \n",
+      "10  70c28a26-9494-482d-bd69-3b6d30ca5296  \n",
+      "11  0c65f7fe-3962-4abf-b9f0-9f90a1d4889b  \n",
+      "12  e9f0bdb0-1098-437b-8cc7-b77dd9c84325  \n",
+      "13  63cedb1b-594a-4bcb-b388-6580fe24bf42  \n",
+      "14  5d307fac-b147-4b2b-9490-9c68541ab3e8  \n",
+      "15  70b79749-668c-41f6-837c-c731ddcc1593  \n",
+      "16  3fab3b19-451a-46b3-b7a6-dff93a05bde8  \n",
+      "17  767c8aed-b69f-4639-a05f-52040673b1ab  \n",
+      "18  b2e38a97-03ca-4d89-8711-0916607985c7  \n",
+      "19  9c42ba86-8e86-4bb3-98fa-c911403c248a  \n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<bound method DataFrame.info of                     event_time event_type  product_id          category_id  \\\n",
-       "0      2020-04-02 07:06:34 UTC       view    10300129  2232732104888681081   \n",
-       "1      2020-04-18 14:31:12 UTC       view   100119349  2232732093077520756   \n",
-       "2      2020-04-12 10:04:49 UTC       view    47500019  2053013561554240247   \n",
-       "3      2020-04-08 05:38:35 UTC       view   100174793  2053013555782877609   \n",
-       "4      2020-04-25 20:31:45 UTC       view     7001735  2232732079009824823   \n",
-       "...                        ...        ...         ...                  ...   \n",
-       "69879  2020-04-25 08:22:43 UTC       view   100101194  2232732088413454589   \n",
-       "69880  2020-04-29 13:48:47 UTC       view    12715811  2053013553199186187   \n",
-       "69881  2020-04-10 06:38:23 UTC       view    12500851  2232732091131363646   \n",
-       "69882  2020-04-17 05:12:12 UTC       view    13200134  2232732061804790604   \n",
-       "69883  2020-04-30 09:55:24 UTC       view   100170502  2055156924407612189   \n",
+       "<bound method DataFrame.info of                      event_time event_type  product_id          category_id  \\\n",
+       "0       2020-04-12 11:56:08 UTC       view    10900115  2232732105912091273   \n",
+       "1       2020-04-23 05:30:29 UTC       view    37600024  2053013558458843721   \n",
+       "2       2020-04-15 19:10:51 UTC       view   100045382  2232732093077520756   \n",
+       "3       2020-04-23 18:11:28 UTC       view    12301106  2053013563743667055   \n",
+       "4       2020-04-25 18:32:55 UTC       view   100067673  2232732103294845523   \n",
+       "...                         ...        ...         ...                  ...   \n",
+       "502709  2020-04-10 08:49:18 UTC       view    55600006  2053013562720256823   \n",
+       "502710  2020-04-25 08:24:55 UTC       view     1004870  2232732093077520756   \n",
+       "502711  2020-04-21 15:19:30 UTC       view    27600024  2232732098614002163   \n",
+       "502712  2020-04-18 13:41:33 UTC       view   100117170  2053013563970159485   \n",
+       "502713  2020-04-09 03:34:28 UTC       view     2602012  2232732101835227701   \n",
        "\n",
-       "                   category_code      brand    price    user_id  \\\n",
-       "0                  apparel.scarf     chicco    14.13  525254962   \n",
-       "1       construction.tools.light    samsung  1280.32  564776771   \n",
-       "2             electronics.clocks   puckator    20.59  514083451   \n",
-       "3                  sport.bicycle     adidas    82.34  638156155   \n",
-       "4                    kids.skates  wingoffly   144.12  646927025   \n",
-       "...                          ...        ...      ...        ...   \n",
-       "69879  furniture.universal.light        NaN    21.42  646917833   \n",
-       "69880                        NaN   triangle    54.70  646117431   \n",
-       "69881                        NaN        NaN    32.92  602654001   \n",
-       "69882      furniture.bedroom.bed        NaN   138.23  641532400   \n",
-       "69883            accessories.bag     disney    27.00  649406654   \n",
+       "                           category_code    brand    price    user_id  \\\n",
+       "0               appliances.kitchen.mixer    vitek    41.16  521995084   \n",
+       "1                          apparel.shoes  carters    16.09  645811106   \n",
+       "2               construction.tools.light  samsung   334.35  512540410   \n",
+       "3                appliances.kitchen.hood   alteco    47.29  552791080   \n",
+       "4                 apparel.shoes.step_ins    intel  1930.01  614818478   \n",
+       "...                                  ...      ...      ...        ...   \n",
+       "502709                 computers.desktop      NaN   311.69  513851865   \n",
+       "502710          construction.tools.light  samsung   269.20  646682415   \n",
+       "502711             apparel.shoes.sandals    bosch   106.57  530896879   \n",
+       "502712  appliances.kitchen.refrigerators      NaN   154.44  521063503   \n",
+       "502713                               NaN    bosch   514.79  638578016   \n",
        "\n",
-       "                               user_session  \n",
-       "0      f71dc924-d5f3-4e21-906b-a492fe8476c9  \n",
-       "1      20e5e22f-1c18-41af-94e1-c3da9a01a3f7  \n",
-       "2      0c4b4c5e-1ed0-49eb-9882-134f5e70c6f5  \n",
-       "3      01663f5b-958c-40fb-9c31-8c29ee897952  \n",
-       "4      b56c7ad3-dbb8-4637-ae2b-943f703c15fc  \n",
-       "...                                     ...  \n",
-       "69879  76e5b176-b48c-43e1-a18f-230d56350a37  \n",
-       "69880  6ca7a92f-96be-44aa-9413-80a6dafbd711  \n",
-       "69881  a6ea106f-ee2c-45d0-8436-316d948dea02  \n",
-       "69882  f68f32e0-36b1-414f-831a-8250b87182b5  \n",
-       "69883  9f6b4903-9185-472d-b542-e6f076179bc4  \n",
+       "                                user_session  \n",
+       "0       e296c374-1085-465a-898f-06a6248d3654  \n",
+       "1       5aaffefe-b7bc-4a39-8d2a-a59404c169cc  \n",
+       "2       675472b2-558f-4d6c-8c22-df336c4af484  \n",
+       "3       1b09b3bf-9e0c-4d77-8e49-0d9ee1a97a1e  \n",
+       "4       813f6f52-ce8b-4639-be2a-09e23b497e01  \n",
+       "...                                      ...  \n",
+       "502709  c05a7193-ab43-4be1-96ef-8e55be94c7dd  \n",
+       "502710  02840151-9d78-4616-aae3-05b6531ba11d  \n",
+       "502711  a8b9676f-5a9c-467c-a1d2-542d435c1661  \n",
+       "502712  91481f95-ce24-4ce7-961c-62b88fbf74a8  \n",
+       "502713  e30f988c-8c2a-499d-a09d-61bc07ad0a7a  \n",
        "\n",
-       "[69884 rows x 9 columns]>"
+       "[502714 rows x 9 columns]>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +703,7 @@
     "# Load the data\n",
     "if test_data:\n",
     "    df = pd.read_csv(filepath, na_values=\"\")\n",
-    "    df = df.sample(frac=0.0015, replace=False)\n",
+    "    df = df.sample(frac=0.008, replace=False)\n",
     "else:\n",
     "    df = pd.read_csv(filepath, parse_dates=['event_time'])\n",
     "\n",
