adjusted functions org

--- a/notebooks/google_merch_store/3_ga4_merch_missing_values_final.ipynb
+++ b/notebooks/google_merch_store/3_ga4_merch_missing_values_final.ipynb
@@ -20,7 +20,6 @@
     "\n",
     "filepath=r'data/df_merch_2_encoded.csv'\n",
     "\n",
-    "\n",
     "file_tag = \"df_merch_mv_input\""
    ]
   },
@@ -580,48 +579,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MV1 Target Prep"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Labels=[0.0, 1.0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "from numpy import array, ndarray\n",
-    "\n",
-    "# labels: list = list(data_1[target].unique())\n",
-    "# labels.sort()\n",
-    "# print(f\"Labels={labels}\")\n",
-    "\n",
-    "# positive: int = 1\n",
-    "# negative: int = 0\n",
-    "# values: dict[str, list[int]] = {\n",
-    "#     \"Original\": [\n",
-    "#         len(data_1[data_1[target] == negative]),\n",
-    "#         len(data_1[data_1[target] == positive]),\n",
-    "#     ]\n",
-    "# }\n",
-    "\n",
-    "# y_1: array = data_1.pop(target).to_list()\n",
-    "# X_1: ndarray = data_1.values\n",
-    "\n",
-    "y_1, X_1, labels, values = define_target_and_prepare_data(data_1, target)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## MV1 train/test split "
    ]
   },
@@ -647,6 +604,9 @@
     "from sklearn.model_selection import train_test_split\n",
     "from dslabs_functions import plot_multibar_chart\n",
     "\n",
+    "from numpy import array, ndarray\n",
+    "\n",
+    "y_1, X_1, labels, values = define_target_and_prepare_data(data_1, target)\n",
     "\n",
     "# Call the function to split the data\n",
     "train_1, test_1 = split_data_save_csv(pd.DataFrame(X_1, columns=data_1.columns), y_1, data_columns=data_1.columns, target_column=target)\n",
@@ -709,7 +669,7 @@
    "source": [
     "# MV2 - drop null strategy\n",
     "\n",
-    "1. Remove 'device_language' due to high % of null values. Also, since we are not sure of its quality it makes more sense to remove it altogether without sacrificing the number of rows\n",
+    "1. Remove 'device_language' and 'device_operating_system_version' due to high % of null values. Also, since we are not sure of its quality it makes more sense to remove it altogether without sacrificing the number of rows\n",
     "2. Remove remaining null values records "
    ]
   },
@@ -1143,9 +1103,9 @@
    "source": [
     "if test_data==False:\n",
     "    \n",
-    "    data=apply_strategy_1(data)\n",
+    "    data_copy=apply_strategy_1(data)\n",
     "    \n",
-    "    data.to_csv(f\"data/df_merch_3_mv_input.csv\", index=False)\n",
+    "    data_copy.to_csv(f\"data/df_merch_3_mv_input.csv\", index=False)\n",
     "    "
    ]
   }
